Add bouncing ball

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = []
 edition = "2018"
 
 [dependencies]
-amethyst = "0.15.0"
+amethyst = "^0.15.0"
+ncollide2d = "^0.21.0"
 
 [features]
 default = ["vulkan"]
