--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 amethyst = "^0.15.0"
 ncollide2d = "^0.21.0"
+smallvec = "^1.4.0"
 
 [features]
 default = ["vulkan"]
